@@ -1,3 +1,7 @@
+Wed Oct 26 00:59:24 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* gen-auto.pl: Remove.
+
 Mon Sep 26 00:41:39 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* time/stdtime.c (SWI_Territory_ConvertDateAndTime): Add missing
@@ -6,7 +10,7 @@ Mon Sep 26 00:41:39 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 Thu Sep  8 00:10:25 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* unix/unix.c (find_terminator): Remove.
-	(check_io_redir): Support for double quoated redirection filenames.
+	(check_io_redir): Support for double quoted redirection filenames.
 	(get_io_redir): Simplify calls to check_io_redir.
 	Bug #221.
 
